--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>edu.eci.cvds</groupId>
-	<artifactId>ReservaLabECI</artifactId>
+	<artifactId>LabReserves</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ReservaLabECI</name>
+	<name>LabReserves</name>
 	<description>Project of reserves of the ECI computer laboratory</description>
 	<properties>
 		<java.version>17</java.version>
@@ -26,7 +26,12 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
 			
 		<dependency>
@@ -102,7 +107,5 @@
 				</executions>
 			</plugin>
 		</plugins>
-		
 	</build>
-
 </project>
