--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=ReservaLabECI
+#application name
+spring.application.name=LabReserve
+
+#MongoDB configuration
+spring.data.mongodb.uri=mongodb+srv://admin:<db_password>@classroomdatabase.ddlng.mongodb.net/?retryWrites=true&w=majority&appName=ClassRoomDatabase
+spring.data.mongodb.database=ClassRoom
