--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,6 @@
 spring.application.name=LabReserve
 
 #MongoDB configuration
-spring.data.mongodb.uri=mongodb+srv://admin:<db_password>@classroomdatabase.ddlng.mongodb.net/?retryWrites=true&w=majority&appName=ClassRoomDatabase
+mongodb+srv://admin:admin@classroomdatabase.ddlng.mongodb.net/?retryWrites=true&w=majority&appName=ClassRoomDatabase
+spring.data.mongodb.uri=mongodb+srv://admin:admin@classroomdatabase.ddlng.mongodb.net/?retryWrites=true&w=majority&appName=ClassRoomDatabase
 spring.data.mongodb.database=ClassRoom
