generacion de los metodos en service y controller para CRUD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.application.name=LabReserve
 #MongoDB configuration
 mongodb+srv://admin:admin@classroomdatabase.ddlng.mongodb.net/LabReserve?retryWrites=true&w=majority&appName=ClassRoomDatabase
 spring.data.mongodb.uri=mongodb+srv://admin:admin@classroomdatabase.ddlng.mongodb.net/LabReserve?retryWrites=true&w=majority&appName=ClassRoomDatabase
-spring.data.mongodb.database=ClassRoom
+spring.data.mongodb.database=LabReserve
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
