primer merging con cambios en develop

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,5 @@
 #application name
-spring.application.name=LabReserve
 
 #MongoDB configuration
-mongodb+srv://admin:admin@classroomdatabase.ddlng.mongodb.net/LabReserve?retryWrites=true&w=majority&appName=ClassRoomDatabase
 spring.data.mongodb.database=LabReserve
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.uri=mongodb+srv://admin:admin@classroomdatabase.ddlng.mongodb.net/LabReserve?retryWrites=true&w=majority&appName=ClassRoomDatabase
+spring.data.mongodb.uri=mongodb+srv://admin:admin@classroomdatabase.ddlng.mongodb.net/?retryWrites=true&w=majority&appName=ClassRoomDatabase
