--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #application name
 spring.application.name=LabReserve
-
+server.port=8080
 #MongoDB configuration
 mongodb+srv://admin:admin@classroomdatabase.ddlng.mongodb.net/?retryWrites=true&w=majority&appName=ClassRoomDatabase
 spring.data.mongodb.uri=mongodb+srv://admin:admin@classroomdatabase.ddlng.mongodb.net/?retryWrites=true&w=majority&appName=ClassRoomDatabase
