arreglo de los bugs en ReserveController y Schedule

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 #application name
+spring.application.name=LabReserve
 
 #MongoDB configuration
+mongodb+srv://admin:admin@classroomdatabase.ddlng.mongodb.net/LabReserve?retryWrites=true&w=majority&appName=ClassRoomDatabase
+spring.data.mongodb.uri=mongodb+srv://admin:admin@classroomdatabase.ddlng.mongodb.net/LabReserve?retryWrites=true&w=majority&appName=ClassRoomDatabase
 spring.data.mongodb.database=LabReserve
-spring.data.mongodb.uri=mongodb+srv://admin:admin@classroomdatabase.ddlng.mongodb.net/?retryWrites=true&w=majority&appName=ClassRoomDatabase
+
+# Configuration de logs
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+logging.level.org.springframework.web=DEBUG
