--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,15 @@
 			<artifactId>spring-boot-starter</artifactId>
 			<version>3.2.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-json</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.15.3</version>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
