--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,81 +1,54 @@
-name: Deploy Java App to Azure Web App
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+   name: Build and Test Java Spring Boot Application 
+    
+   on:
+     push:
+       branches: [ "main" ]
+     pull_request:
+       branches: [ "main" ]
+    
+   jobs:
+     build:
+       runs-on: ubuntu-latest
+       steps:
+         - uses: actions/checkout@v3
+         - name: Set up JDK 17
+           uses: actions/setup-java@v3
+           with:
+             java-version: '17'
+             distribution: 'temurin'
+             cache: maven
+         
+         - name: Build with Maven
+           run: mvn compile
+   
+     test:
+       runs-on: ubuntu-latest
+       needs: build
+       steps:
+         - uses: actions/checkout@v3
+         - name: Set up JDK 17
+           uses: actions/setup-java@v3
+           with:
+             java-version: '17'
+             distribution: 'temurin'
+             cache: maven
+   
+         
+         - name: Run tests
+           run: mvn verify
+   
+     deploy:
+       runs-on: ubuntu-latest
+       needs: test
+       steps:
+         - uses: actions/checkout@v3
+         - name: Set up JDK 17
+           uses: actions/setup-java@v3
+           with:
+             java-version: '17'
+             distribution: 'temurin'
+             cache: maven
+         - name: Build with Maven
+         - run: echo "En construccion..."
 
-env:
-  AZURE_WEBAPP_NAME: 'labReserve'  
-  AZURE_WEBAPP_PACKAGE_PATH: 'target/*.jar'  
-  JAVA_VERSION: '17' 
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: 'Checkout GitHub Action'
-        uses: actions/checkout@v4
-
-      - name: 'Set up JDK ${{ env.JAVA_VERSION }}'
-        uses: actions/setup-java@v4
-        with:
-          java-version: ${{ env.JAVA_VERSION }}
-          distribution: 'temurin' 
-
-      - name: 'Build with Maven'
-        run: mvn clean package
-
-      - name: 'Upload build artifact'
-        uses: actions/upload-artifact@v3
-        with:
-          name: app-jar
-          path: target/*.jar
-
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: 'Checkout GitHub Action'
-        uses: actions/checkout@v4
-
-      - name: 'Set up JDK ${{ env.JAVA_VERSION }}'
-        uses: actions/setup-java@v4
-        with:
-          java-version: ${{ env.JAVA_VERSION }}
-          distribution: 'temurin'
-
-      - name: 'Download build artifact'
-        uses: actions/download-artifact@v3
-        with:
-          name: app-jar
-
-      - name: 'Run tests with Maven'
-        run: mvn test
-
-      - name: 'Upload test results'
-        uses: actions/upload-artifact@v3
-        with:
-          name: test-results
-          path: target/surefire-reports/
-
-  deploy:
-      runs-on: ubuntu-latest
-  
-      needs: test
-  
-      steps:
-        - name: 'Checkout GitHub Action'
-          uses: actions/checkout@v4
-
-        - name: 'Set up JDK ${{ env.JAVA_VERSION }}'
-          uses: actions/setup-java@v4
-          with:
-            java-version: ${{ env.JAVA_VERSION }}
-            distribution: 'temurin'
-
-        - name: 'Build with Maven'
-          run: echo 'En construccion...'
