--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,7 +11,8 @@
      build:
        runs-on: ubuntu-latest
        steps:
-         - uses: actions/checkout@v3
+         - name: 'Checkout GitHub Action'
+           uses: actions/checkout@v3
          - name: Set up JDK 17
            uses: actions/setup-java@v3
            with:
@@ -26,7 +27,9 @@
        runs-on: ubuntu-latest
        needs: build
        steps:
-         - uses: actions/checkout@v3
+         - name: 'Checkout GitHub Action'
+           uses: actions/checkout@v3
+           
          - name: Set up JDK 17
            uses: actions/setup-java@v3
            with:
@@ -34,7 +37,6 @@
              distribution: 'temurin'
              cache: maven
    
-         
          - name: Run tests
            run: mvn verify
    
@@ -42,7 +44,9 @@
        runs-on: ubuntu-latest
        needs: test
        steps:
-         - uses: actions/checkout@v3
+         - name: 'Checkout GitHub Action'  
+           uses: actions/checkout@v3
+           
          - name: Set up JDK 17
            uses: actions/setup-java@v3
            with:
@@ -50,5 +54,5 @@
              distribution: 'temurin'
              cache: maven
          - name: Build with Maven
-         - run: echo "En construccion..."
+           run: echo "En construccion..."
 
