--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -59,8 +59,9 @@
        needs: test
        steps:
          - name: 'Checkout GitHub Action'  
-           uses: actions/checkout@v3
-           
+           uses: actions/download-artifact@v2
+           with:
+              name: 'LabReserve'
          - name: Set up JDK 17
            uses: actions/setup-java@v3
            with:
@@ -68,6 +69,10 @@
              distribution: 'temurin'
              cache: maven
 
-         - name: Build with Maven
-           run: echo "En construccion..."
+         - name: 'Deploy to Azure App Service'
+           uses: azure/webapps-deploy@v2
+           with:
+              app-name: LabReserve
+              publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+              package: '*.jar'
 
