--- a/.github/workflows/main_labreserveeci.yml
+++ b/.github/workflows/main_labreserveeci.yml
@@ -5,8 +5,9 @@ name: Build and deploy JAR app to Azure Web App - LabReserveEci
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
