--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -56,23 +56,32 @@
    
      deploy:
        runs-on: ubuntu-latest
-       needs: test
-       steps:
-         - name: 'Checkout GitHub Action'  
-           uses: actions/download-artifact@v2
-           with:
-              name: 'LabReserve'
-         - name: Set up JDK 17
-           uses: actions/setup-java@v3
-           with:
-             java-version: '17'
-             distribution: 'temurin'
-             cache: maven
 
-         - name: 'Deploy to Azure App Service'
+       needs: test
+
+       steps:
+         - name: 'Checkout GitHub Action'
+           uses: actions/checkout@v4
+
+         - name: 'Set up JDK 17'
+           uses: actions/setup-java@v4
+           with:
+             java-version: 17
+             distribution: 'temurin'
+
+         - name: 'Build with Maven'
+           run: mvn package
+
+         - name: 'Deploy to Azure Web App'
            uses: azure/webapps-deploy@v2
            with:
-              app-name: LabReserve
-              publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-              package: '*.jar'
+             app-name: 'LabReserve'
+             publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+             package: target/*.jar
+
+         - name: 'Upload build artifact'
+           uses: actions/upload-artifact@v3
+           with:
+             name: app-jar
+             path: target/*.jar
 
