--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -53,30 +53,24 @@
              name: test report
              path: target/surefire-reports/
 
-   
      deploy:
        runs-on: ubuntu-latest
-
        needs: test
-
        steps:
-         - name: 'Checkout GitHub Action'
-           uses: actions/checkout@v4
-
-         - name: 'Set up JDK 17'
-           uses: actions/setup-java@v4
+         - uses: actions/checkout@v3
+         - name: Set up JDK 17
+           uses: actions/setup-java@v3
            with:
-             java-version: 17
+             java-version: '17'
              distribution: 'temurin'
-
-         - name: 'Build with Maven'
+             
+         - name: Build with Maven
            run: mvn package
-
-         - name: 'Deploy to Azure Web App'
+           
+         - name: Deploy to Azure WebApp
            uses: azure/webapps-deploy@v2
            with:
-             app-name: 'LabReserve'
-             publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+             app-name: LabReserve
              package: target/*.jar
 
          - name: 'Upload build artifact'
@@ -84,4 +78,3 @@
            with:
              name: app-jar
              path: target/*.jar
-
