--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -71,6 +71,7 @@
            uses: azure/webapps-deploy@v2
            with:
              app-name: LabReserve
+             publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
              package: target/*.jar
 
          - name: 'Upload build artifact'
