--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,85 +1,81 @@
+name: Build and Test Java Spring Boot Application
 
-   name: Build and Test Java Spring Boot Application 
-    
-   on:
-     push:
-       branches: [ "main" ]
-     pull_request:
-       branches: [ "main" ]
-    
-   jobs:
-     build:
-       runs-on: ubuntu-latest
-       steps:
-         - name: 'Checkout GitHub Action'
-           uses: actions/checkout@v3
-         - name: Set up JDK 17
-           uses: actions/setup-java@v3
-           with:
-             java-version: '17'
-             distribution: 'temurin'
-             cache: maven
-         
-         - name: Compile with Maven
-           run: mvn compile
-         - name: Upload Compilation Artifacts
-           uses: actions/upload-artifact@v4
-           with:
-             name: comiled-artifacts
-             path: target/classes/
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
-   
-     test:
-       runs-on: ubuntu-latest
-       needs: build
-       steps:
-         - name: 'Checkout GitHub Action'
-           uses: actions/checkout@v3
-           
-         - name: Set up JDK 17
-           uses: actions/setup-java@v3
-           with:
-             java-version: '17'
-             distribution: 'temurin'
-             cache: maven
-   
-         - name: Run tests
-           run: mvn test
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'Checkout GitHub Action'
+        uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
 
-         - name: Upload Test Report
-           uses: actions/upload-artifact@v4
-           if: success() || failure()
-           with:
-             name: test report
-             path: target/surefire-reports/
+      - name: Compile with Maven
+        run: mvn compile
+      - name: Upload Compilation Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: compiled-artifacts
+          path: target/classes/
 
-   deploy:
-     runs-on: ubuntu-latest
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: 'Checkout GitHub Action'
+        uses: actions/checkout@v3
 
-     needs: test
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
 
-     steps:
-       - name: 'Checkout GitHub Action'
-         uses: actions/checkout@v4
+      - name: Run tests
+        run: mvn test
 
-       - name: 'Set up JDK 17'
-         uses: actions/setup-java@v4
-         with:
-           java-version: 17
-           distribution: 'temurin'
+      - name: Upload Test Report
+        uses: actions/upload-artifact@v3
+        if: success() || failure()
+        with:
+          name: test-report
+          path: target/surefire-reports/
 
-       - name: 'Build with Maven'
-         run: mvn package
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: 'Checkout GitHub Action'
+        uses: actions/checkout@v3
 
-       - name: 'Deploy to Azure Web App'
-         uses: azure/webapps-deploy@v2
-         with:
-           app-name: LabReserveEci
-           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-           package: target/*.jar
+      - name: 'Set up JDK 17'
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
-       - name: 'Upload build artifact'
-         uses: actions/upload-artifact@v3
-         with:
-           name: app-jar
-           path: target/*.jar
+      - name: 'Build with Maven'
+        run: mvn package
+
+      - name: 'Deploy to Azure Web App'
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: LabReserveEci
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: target/*.jar
+
+      - name: 'Upload build artifact'
+        uses: actions/upload-artifact@v3
+        with:
+          name: app-jar
+          path: target/*.jar
