--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,72 +10,51 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: 'Checkout GitHub Action'
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
 
-      - name: Compile with Maven
+      - name: Build with Maven
         run: mvn compile
-      - name: Upload Compilation Artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: compiled-artifacts
-          path: target/classes/
 
   test:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: 'Checkout GitHub Action'
-        uses: actions/checkout@v3
-
+      - uses: actions/checkout@v4
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
 
-      - name: Run tests
-        run: mvn test
 
-      - name: Upload Test Report
-        uses: actions/upload-artifact@v3
-        if: success() || failure()
-        with:
-          name: test-report
-          path: target/surefire-reports/
+      - name: Run tests
+        run: mvn verify
 
   deploy:
     runs-on: ubuntu-latest
     needs: test
     steps:
-      - name: 'Checkout GitHub Action'
-        uses: actions/checkout@v3
-
-      - name: 'Set up JDK 17'
-        uses: actions/setup-java@v3
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-
-      - name: 'Build with Maven'
+          cache: maven
+      - name: Build with Maven
         run: mvn package
 
-      - name: 'Deploy to Azure Web App'
+
+      - name: Deploy to Azure WebApp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: LabReserveEci
+          app-name: 'TaskManagerCVDS'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: target/*.jar
-
-      - name: 'Upload build artifact'
-        uses: actions/upload-artifact@v3
-        with:
-          name: app-jar
-          path: target/*.jar
