--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -55,6 +55,6 @@ jobs:
       - name: Deploy to Azure WebApp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'TaskManagerCVDS'
+          app-name: 'LabReserveEci'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: target/*.jar
