--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,53 +1,93 @@
-name: Build and Test Java Spring Boot Application
+name: Deploy Java App to Azure Web App
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main 
+
+env:
+  AZURE_WEBAPP_NAME: 'LabReserveEci'  
+  AZURE_WEBAPP_PACKAGE_PATH: 'target/*.jar'  
+  JAVA_VERSION: '17' 
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 17
+      - name: 'Checkout GitHub Action'
+        uses: actions/checkout@v4
+
+      - name: 'Set up JDK ${{ env.JAVA_VERSION }}'
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
-          distribution: 'temurin'
+          java-version: ${{ env.JAVA_VERSION }}
+          distribution: 'temurin' 
 
-      - name: Build with Maven
-        run: mvn compile
+      - name: 'Build with Maven'
+        run: mvn clean package
+
+      - name: 'Upload build artifact'
+        uses: actions/upload-artifact@v3
+        with:
+          name: app-jar
+          path: target/*.jar
 
   test:
     runs-on: ubuntu-latest
     needs: build
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 17
+      - name: 'Checkout GitHub Action'
+        uses: actions/checkout@v4
+
+      - name: 'Set up JDK ${{ env.JAVA_VERSION }}'
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: ${{ env.JAVA_VERSION }}
           distribution: 'temurin'
-          cache: maven
 
+      - name: 'Download build artifact'
+        uses: actions/download-artifact@v3
+        with:
+          name: app-jar
 
-      - name: Run tests
-        run: mvn verify
+      - name: 'Run tests with Maven'
+        run: mvn test
+
+      - name: 'Upload test results'
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-results
+          path: target/surefire-reports/
 
   deploy:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: LabReserveEci
+      runs-on: ubuntu-latest
+  
+      needs: test
+  
+      steps:
+        - name: 'Checkout GitHub Action'
+          uses: actions/checkout@v4
 
-      - name: Deploy to Azure WebApp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'LabReserveEci'
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: '*.jar'
+        - name: 'Set up JDK ${{ env.JAVA_VERSION }}'
+          uses: actions/setup-java@v4
+          with:
+            java-version: ${{ env.JAVA_VERSION }}
+            distribution: 'temurin'
+
+        - name: 'Build with Maven'
+          run: mvn package
+  
+        - name: 'Deploy to Azure Web App'
+          uses: azure/webapps-deploy@v2
+          with:
+            app-name: ${{ env.AZURE_WEBAPP_NAME }}
+            publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+            package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
+        - name: 'Upload build artifact'
+          uses: actions/upload-artifact@v3
+          with:
+            name: app-jar
+            path: target/*.jar
